fix(SiteCommon/wordBreak): remove white-space: pre-wrap

--- a/src/SiteCommon/modules/wordBreak.less
+++ b/src/SiteCommon/modules/wordBreak.less
@@ -22,7 +22,6 @@ pre,
 .ve-init-mw-desktopArticleTarget .CodeMirror-code *,
 .ve-init-mw-desktopArticleTarget .ve-ui-mwWikitextSurface .ve-ce-paragraphNode {
 	line-break: anywhere !important;
-	white-space: pre-wrap !important;
 	word-break: break-all !important;
 	word-wrap: break-word !important;
 }
